@@ -3,7 +3,9 @@ package net.mineacle.core.baltop.command;
 import net.mineacle.core.Core;
 import net.mineacle.core.baltop.gui.BalTopGui;
 import net.mineacle.core.common.gui.MenuHistory;
+import net.mineacle.core.common.player.DisplayNames;
 import net.mineacle.core.common.sound.SoundService;
+import net.mineacle.core.common.text.TextColor;
 import net.mineacle.core.economy.service.EconomyService;
 import org.bukkit.Bukkit;
 import org.bukkit.OfflinePlayer;
@@ -13,7 +15,6 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -29,7 +30,12 @@ public final class BalTopCommand implements CommandExecutor, TabCompleter {
     }
 
     @Override
-    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+    public boolean onCommand(
+            CommandSender sender,
+            Command command,
+            String label,
+            String[] args
+    ) {
         if (!sender.hasPermission("mineaclebaltop.use")) {
             sender.sendMessage(core.getMessage("general.no-permission"));
 
@@ -40,8 +46,22 @@ public final class BalTopCommand implements CommandExecutor, TabCompleter {
             return true;
         }
 
+        if (args.length > 0) {
+            sender.sendMessage(TextColor.color("&cUsage: /baltop"));
+
+            if (sender instanceof Player player) {
+                SoundService.guiError(player, core);
+            }
+
+            return true;
+        }
+
         if (sender instanceof Player player) {
-            MenuHistory.openRoot(core, player, () -> BalTopGui.open(core, player, economyService, 0));
+            MenuHistory.openRoot(
+                    core,
+                    player,
+                    () -> BalTopGui.open(core, player, economyService, 0)
+            );
             return true;
         }
 
@@ -54,25 +74,28 @@ public final class BalTopCommand implements CommandExecutor, TabCompleter {
             return true;
         }
 
-        int position = 1;
-
-        for (Map.Entry<UUID, Long> entry : top) {
+        for (int index = 0; index < top.size(); index++) {
+            Map.Entry<UUID, Long> entry = top.get(index);
             OfflinePlayer target = Bukkit.getOfflinePlayer(entry.getKey());
-            String name = target.getName() == null ? entry.getKey().toString() : target.getName();
+            String displayName = DisplayNames.displayName(target);
 
-            sender.sendMessage(core.getMessage("baltop.line")
-                    .replace("%position%", String.valueOf(position))
-                    .replace("%player%", name)
-                    .replace("%balance%", economyService.format(entry.getValue())));
-
-            position++;
+            sender.sendMessage(TextColor.color(
+                    "&#ff88ff#" + (index + 1)
+                            + " &#bbbbbb" + displayName
+                            + " &#bbbbbb- &a" + economyService.format(entry.getValue())
+            ));
         }
 
         return true;
     }
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
-        return Collections.emptyList();
+    public List<String> onTabComplete(
+            CommandSender sender,
+            Command command,
+            String alias,
+            String[] args
+    ) {
+        return List.of();
     }
 }
